# ecommerce-product-review-analysis

./: .gitignore  README.md  chroller.py  chroller_2.py  kyobo_chroller_sample.py  pyproject.toml  upload_news_to_supabase.py
analysis/: bestseller_eda.ipynb  bestseller_plotly_all_categories.ipynb  calculate_weekly_viral_index.py  weekly_news_viral_index.csv
analysis/EDA/: bestseller_eda.ipynb  bestseller_plotly.ipynb  viral_index_eda.ipynb
analysis/correlation/: calc_indicators.py  categorize_news.py  correlation_analysis_v3.ipynb  correlation_results_v3.csv  lag_analysis_v3.csv  monthly_all_category_rankings.csv  news_monthly_by_category.csv
analysis/my_prophet/: top3_smoothed_viral_prophet.ipynb
bestseller-crawler/: categorize_books.py  categorize_by_title.py  kyobo_bestseller_crawler.py  retry_empty_books.py
kyobo_review_crawler/: README.md  kyobo_crawler.py  kyobo_review_crawler.py  kyobo_reviews_S000000610612.csv  kyobo_reviews_S000217467412.csv  kyobo_reviews_all_20260109_161326.csv
raw_biz_news_data/monthly_viral_index/: 2025_viral_index_matrix.csv  2025_viral_index_top3.csv  calculate_viral_index.py
월별 바이럴 지수/: 바이럴_지수_코드_사용법.md
