[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "requests>=2.32.5",
    "selenium>=4.39.0",
    "tqdm>=4.67.1",
]
